--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+SECRET_KEY = 'django-insecure-k(hienfvjdr)gm7g1i2l29no^9^b46$1$&yajo!r3m=$4@&u@^'
 WWO_API = '469327e52a7d4df9b31102143222101'
 WWO_API2 = '6ac29886d0fd4305ac7131306222201'
 WWO_API3 = 'f5a196eaccca4cfe84a191947222301'
