--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+aiohttp~=3.8.1
+aiosignal~=1.2.0
+aiosqlite~=0.17.0
 asgiref~=3.4.1
 certifi~=2021.10.8
 charset-normalizer~=2.0.10
 Django~=4.0.1
-flake8~=4.0.1
 idna~=3.3
-isort~=5.10.1
 mccabe~=0.6.1
 pycodestyle~=2.8.0
 pyflakes~=2.4.0
